# simd-csv

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: tests.yml
benchmark/: bench.sh
benchmark/engines/rust_csv/: Cargo.toml  main.rs
benchmark/engines/rust_simd_csv/: Cargo.toml  main.rs
examples/: count.rs  instructions.rs  integrity.rs  passthrough.rs  seek.rs  simd.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: reader.rs  splitter.rs  str.rs  writer.rs
scripts/: bench.moonblade  bench.sh  ftest.sh  grid.sh  methods-bench.sh  misc.txt  writer-bench.sh
src/: binary.rs  buffer.rs  core.rs  debug.rs  error.rs  ext.rs  headers.rs  lib.rs  line_buffer.rs  line_reader.rs  peeker.rs  reader.rs  records.rs  searcher.rs  seeker.rs  splitter.rs  total_reader.rs  utils.rs  writer.rs  zero_copy_reader.rs
src/select/: dsl.rs  headers.rs  mod.rs  selection.rs
