[package]
name = "simd-csv"
version = "0.9.0"
edition = "2021"
authors = [
  "Guillaume Plique <guillaume.plique@sciencespo.fr>"
]
description = "Specialized Rust CSV parsers/writers leveraging SIMD instructions. "
documentation = "https://github.com/medialab/simd-csv#readme"
homepage = "https://github.com/medialab/simd-csv"
repository = "https://github.com/medialab/simd-csv"
readme = "README.md"
keywords = ["csv", "tsv", "simd"]
license = "MIT"

[lib]
doctest = false

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.release-debug]
inherits = "release"
codegen-units = 1
lto = false
strip = false
debug = true

[dependencies]
memchr = "2.7.6"

[dev-dependencies]
anyhow = "1.0.100"
bstr = "1.12.0"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
memmap2 = "0.9.8"
