[package]
name = "simd-csv-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.simd-csv]
path = ".."

[[bin]]
name = "reader"
path = "fuzz_targets/reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "splitter"
path = "fuzz_targets/splitter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "writer"
path = "fuzz_targets/writer.rs"
test = false
doc = false
bench = false
